Fix header on safari

--- a/src/app/components/header/header.module.scss
+++ b/src/app/components/header/header.module.scss
@@ -20,7 +20,7 @@
 
 	nav {
 		display: flex;
-		flex-wrap: wrap;
+		flex-wrap: nowrap;
 		justify-content: space-between;
 		gap: 0.25rem;
 		max-width: 500px;
